Loading bar added

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
 <body>
     <section class="main-wrapper">
         <section class="white-block">
-            Hi
+            <div class="white-block__body">
+                <div class="white-block__body__loading-block">
+                    <div class="white-block__body__loading-block__done"></div>
+                    <span class="white-block__body__loading-block__text">80% готово</span>
+                </div>
+            </div>
         </section>
     </section>
 </body>
