--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Form Task</title>
     <link rel="stylesheet" href="src/stylesheets.css" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,700,800&display=swap&subset=cyrillic" rel="stylesheet" />
+    <script defer type="text/javascript" src="src/script.js"></script>
 </head>
 <body>
     <section class="main-wrapper">
@@ -16,6 +17,56 @@
                     <div class="white-block__body__loading-block__done"></div>
                     <span class="white-block__body__loading-block__text">80% готово</span>
                 </div>
+                <div class="white-block__body__request-block">
+                    <span class="white-block__body__request-block__text">
+                        Почти готово! Пожалуйста, заполните эту форму и нажмите кнопку ниже, чтобы участвовать в онлайн мастер-классе
+                    </span>
+                </div>
+                <form id="main-form" class="white-block__body__confirm-block">
+                    <p class="white-block__body__confirm-block__name-path">
+                        Да, Я
+                        <label for="name-field" class="white-block__body__confirm-block__name-path__lighting-text">
+                            (введите Ваше имя)
+                        </label>
+                        <input id="name-field" type="text" class="white-block__body__confirm-block__name-path__name-field" />
+                        хочу участвовать в Онлайн Мастер-Классе и получить PDF-список “ТОП50 товаров из Китая”, которые можно продать в СНГ с наценкой в 300%
+                    </p>
+                    <p class="white-block__body__confirm-block__email-path">
+                        Вышлите мне доступ на
+                        <label for="email-field" class="white-block__body__confirm-block__name-path__lighting-text">
+                            E-mail
+                        </label>
+                        <input
+                                type="text"
+                                class="white-block__body__confirm-block__email-path__email-field"
+                                id="email-field"
+                        />
+                    </p>
+                    <div class="white-block__body__confirm-block__phone-path">
+                        Чтобы я 100% не забыл, пришлите мне СМС-напоминание на этот моб. тел.
+                        <label for="phone-field" class="white-block__body__confirm-block__name-path__lighting-text">
+                            (введите номер)
+                        </label>
+                        :
+                        <div class="white-block__body__confirm-block__email-path__phone-field">
+                            <img src="imgs/flag.png" alt="flag" class="white-block__body__confirm-block__email-path__phone-field__flag" />
+                            <input
+                                    type="text"
+                                    class="white-block__body__confirm-block__email-path__phone-field"
+                                    id="phone-field"
+                            />
+                        </div>
+                    </div>
+                    <input type="submit" class="white-block__body__confirm-block__accept-button" />
+                    <div class="white-block__body__confirm-block__hidden-info">
+                        <div class="white-block__body__confirm-block__hidden-info__inner">
+                            <img src="imgs/lock.png" alt="5" class="white-block__body__confirm-block__hidden-info__img" />
+                            <span class="white-block__body__confirm-block__hidden-info__text">
+                                100% защита даных от 3-х лиц
+                            </span>
+                        </div>
+                    </div>
+                </form>
             </div>
         </section>
     </section>
