--- a/congrats.html
+++ b/congrats.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <title>Document</title>
+    <title>Congrats!</title>
+    <link rel="stylesheet" href="src/stylesheets/congrats.css">
 </head>
 <body>
-    Thanks!
+    <div class="main-block">Спасибо за регистрацию!</div>
 </body>
 </html>
