Stylesheets second small fix

--- a/index.html
+++ b/index.html
@@ -23,10 +23,11 @@
                 </div>
                 <form id="main-form" class="white-block__body__confirm-block">
                     <div class="white-block__body__confirm-block__path">
-                        <span>Да, Я</span>
-                        <label for="name-field" class="white-block__body__confirm-block__path__lighting-text">
-                            (введите Ваше имя)
-                        </label>
+                        <span>Да, Я
+                            <label for="name-field" class="white-block__body__confirm-block__path__lighting-text">
+                                (введите Ваше имя)
+                            </label>
+                        </span>
                         <input
                             id="name-field"
                             placeholder="Снежана"
@@ -39,10 +40,11 @@
                         </span>
                     </div>
                     <div class="white-block__body__confirm-block__path">
-                        <span>Вышлите мне доступ на</span>
-                        <label for="email-field" class="white-block__body__confirm-block__path__lighting-text">
-                            E-mail
-                        </label>
+                        <span>Вышлите мне доступ на
+                            <label for="email-field" class="white-block__body__confirm-block__path__lighting-text">
+                                E-mail
+                            </label>
+                        </span>
                         <input
                             id="email-field"
                             placeholder="example@mail.com"
@@ -54,11 +56,11 @@
                     <div class="white-block__body__confirm-block__path">
                         <span>
                             Чтобы я 100% не забыл, пришлите мне СМС-напоминание на этот моб. тел.
+                            <label for="phone-field" class="white-block__body__confirm-block__path__lighting-text">
+                                (введите номер)
+                            </label>
+                            :
                         </span>
-                        <label for="phone-field" class="white-block__body__confirm-block__path__lighting-text">
-                            (введите номер)
-                        </label>
-                        <span>:</span>
                         <div class="white-block__body__confirm-block__path__phone-field">
                             <img src="imgs/flag.png" alt="flag" class="white-block__body__confirm-block__path__phone-field__flag" />
                             <input
